# RuneBook

./: .gitignore  CLAUDE.md  README.md  icon-source.gen.py  index.html  package-lock.json  package.json  test-empty-md.mjs  vite.config.js
.github/workflows/: ci.yml  release.yml
.memory/: INDEX.md
.memory/nodes/: ai-reports.md  app-svelte-nul-bytes.md  backup-restore.md  bm25-materialized-gotcha.md  browse-list-refresh.md  collections.md  command-palette.md  command-variables.md  copy-per-code-block.md  current-runbook-setting.md  db-rs-shared-with-mcp.md  executable-steps.md  fts5-search.md  git-sync.md  hotkey-toggle-workspace.md  link-navigation-trap.md  local-rustfmt-mismatch.md  markdown-editor-component.md  markdown-export.md  markdown-render-key-guard.md  markdown-step-model.md  mcp-server.md  optional-steps.md  overlay-show-event.md  overlay-window.md  pipe-masks-exit-code.md  production-readiness.md  project-pinning.md  quick-add-capture.md  release-ci-and-self-update.md  replay-progress.md  rusqlite-data-layer.md  select-option-color.md  settings-and-hotkey.md  step-number-badges.md  svelte-dynamic-input-type.md  tag-filtering.md  tauri-over-electron.md  ui-theming-tokens.md  variable-profiles.md  (+3 more)
docs/: 01-architecture.md  02-data-model.md  03-overlay-and-ux.md  04-roadmap.md  05-decisions.md  06-mcp-server.md
mcp-server/: Cargo.toml  README.md
mcp-server/src/: main.rs
scripts/: release.sh  update.sh
src/: App.svelte  MarkdownEditor.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
