[package]
name = "runebook-mcp"
version = "0.2.0"
edition = "2021"
rust-version = "1.77.2"
description = "Model Context Protocol (stdio) server exposing the local Runebook database to AI tools — Claude Code, Cursor, etc."

[[bin]]
name = "runebook-mcp"
path = "src/main.rs"

[dependencies]
# The MCP server reuses Runebook's data layer (src-tauri/src/db.rs, included via
# #[path]) so the SQL schema, migrations, and FTS5 search stay single-sourced.
# That file only needs rusqlite + serde, so this binary has NO Tauri/webkit deps.
# `backup` is required because db.rs references rusqlite::backup (even though the
# MCP server doesn't expose backup/restore); `bundled` compiles SQLite from source.
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
